crates/math-core/tests/snapshots/conversion_test__colon_sqrt.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt :"
---
<math>
    <msqrt>
        <mo>:</mo>
    </msqrt>
</math>
