crates/math-core/tests/snapshots/conversion_test__color.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{\\color{Blue}x^2}"
---
<math>
    <mrow style="color:#102694;">
        <msup>
            <mi>x</mi>
            <mn>2</mn>
        </msup>
    </mrow>
</math>
