crates/math-core/tests/snapshots/conversion_test__color_continues_past_newline.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\color{red}a\\\\ b"
---
<math>
    <mrow style="color:#FF0000;">
        <mi>a</mi>
        <mrow></mrow>
        <mi>b</mi>
    </mrow>
</math>
