crates/math-core/tests/snapshots/conversion_test__comma_before_close_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "4,)"
---
<math>
    <mn>4</mn>
    <mo>,</mo>
    <mo stretchy="false">)</mo>
</math>
