crates/math-core/tests/snapshots/conversion_test__complex_square_root.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt{x+2}"
---
<math>
    <msqrt>
        <mrow>
            <mi>x</mi>
            <mo>+</mo>
            <mn>2</mn>
        </mrow>
    </msqrt>
</math>
